--- a/automations.yaml
+++ b/automations.yaml
@@ -971,16 +971,14 @@
     domain: binary_sensor
   - type: plugged_in
     platform: device
-    device_id: 9ff97222baf526d2a00bfe723a61cc3f
-    entity_id: binary_sensor.annas_watch_is_charging
+    device_id: f077cacd0f2cbb4b86567e2891d541e5
+    entity_id: d7fc079832a774243bc42d0b9fcf7cc3
     domain: binary_sensor
-    enabled: false
   - type: plugged_in
     platform: device
-    device_id: 28abb52456ef5ac4459a0ac810e7cf0b
-    entity_id: binary_sensor.annas_phone_is_charging
+    device_id: 7df9b28318e1f535b7d778b2ce767f41
+    entity_id: 38647301ac793871e60d3d9bd8712fd7
     domain: binary_sensor
-    enabled: false
   condition:
   - condition: time
     after: '21:30'
@@ -994,11 +992,11 @@
       entity_id: person.tom
       zone: zone.home
   action:
-  - service: climate.set_temperature
-    data:
+  - data:
       temperature: 16
     target:
       entity_id: climate.main_bedroom_radiator_thermostat
+    action: climate.set_temperature
   - if:
     - condition: state
       entity_id: light.main_bedroom_ceiling
