Added: Notification automation for when Zappi starts/ends car charging Added: OpenEpaperLink automation for advent countdown Added: Automation to implement un/sociable hours - turns on/off Do Not Disturb in evenings/mornings

--- a/automations.yaml
+++ b/automations.yaml
@@ -4840,3 +4840,168 @@
       entity_id: media_player.ytube_music_player
     action: media_player.play_media
   mode: single
+- id: '1733399277741'
+  alias: 'OEPL: Xmas Advent Countdown'
+  description: Count down the days till Christmas Day! The date of Christmas is set
+    in the variable days_until_xmas and shouldn't need altering year on year. All
+    images are pulled down from an external server (https://www.chunkymedia.co.uk)
+    - keep you surprised! All images are royalty free from Pixabay. The text used
+    is 'Days 'til Christmas', 'Day 'til Christmas', and 'Merry Christmas' - adjust
+    according to your local language. Edit in YAML.
+  triggers:
+  - at: 07:02:00
+    trigger: time
+  actions:
+  - data:
+      background: white
+      rotate: 270
+      payload:
+      - type: text
+        value: '{{ '''' if days_until_xmas <=0 else days_until_xmas }}'
+        font: ../../media/GothamRnd-Bold.ttf
+        x: 64
+        y: '{{ 168 if days_until_xmas > 99 else 160 | int }}'
+        size: '{{ 60 if days_until_xmas > 99 else 84 | int }}'
+        color: red
+        anchor: mt
+        y_padding: 0
+        spacing: 2
+      - type: dlimg
+        url: "{% if days_until_xmas <= 25 %}\n  https://www.chunkymedia.co.uk/epaper-xmas/dither_it_epaper-xmas-{{
+          days_until_xmas | string }}.jpg\n{% else %} \n  https://www.chunkymedia.co.uk/epaper-xmas/dither_it_epaper-xmas-grinch.jpg\n{%
+          endif %}"
+        x: 0
+        y: 0
+        xsize: 128
+        ysize: '{{ 220 if days_until_xmas <=0 else 156 }}'
+        rotate: 0
+      - type: text
+        value: "{% if days_until_xmas > 0 %}\n  {{ (\"Days\" if days_until_xmas >
+          1 else \"Day\") | string + \" 'til\"}} \n{% else %} \n  Merry\n{% endif
+          %}"
+        font: ../../media/GothamRnd-Bold.ttf
+        x: 64
+        y: 230
+        size: 24
+        color: black
+        anchor: mt
+      - type: text
+        value: Christmas
+        font: ../../media/GothamRnd-Bold.ttf
+        x: 64
+        size: 24
+        color: black
+        anchor: mt
+    target:
+      entity_id:
+      - open_epaper_link.0000021f40f13b1f
+    action: open_epaper_link.drawcustom
+  mode: restart
+  variables:
+    days_until_xmas: "{% set days_until = (today_at().replace(day=25, month=12) |
+      as_local - today_at()).days | int %}  {% if days_until < 0 %}\n  {{(today_at().replace(day=25,
+      month=12, year=now().year+1) | as_local - today_at()).days | int }} \n{% else
+      %} \n  {{days_until | int}} \n{% endif %} "
+- id: '1733949040739'
+  alias: 'Zappi: Software update'
+  description: ''
+  triggers:
+  - type: turned_on
+    device_id: ce8332af9196e047a1fc405316b7a711
+    entity_id: de9acab60b7071cc4b73469314944a50
+    domain: binary_sensor
+    trigger: device
+  conditions: []
+  actions:
+  - action: notify.mobile_app_toms_phone
+    data:
+      message: An software update is available for Zappi
+      title: Zappi
+  mode: single
+- id: '1733949463107'
+  alias: 'Zappi: charging started'
+  description: ''
+  triggers:
+  - trigger: state
+    entity_id:
+    - sensor.myenergi_zappi_plug_status
+    to: Charging
+  conditions: []
+  actions:
+  - action: notify.tom_and_anna
+    data:
+      message: Zappi has started charging the car
+      title: ⚡Zappi
+  mode: single
+- id: '1733949518949'
+  alias: 'Zappi: Charging complete'
+  description: ''
+  triggers:
+  - trigger: state
+    entity_id:
+    - sensor.myenergi_zappi_plug_status
+    to:
+    from: Charging
+  conditions: []
+  actions:
+  - action: notify.tom_and_anna
+    data:
+      message: Zappi has finished charging the car. {{states('sensor.myenergi_zappi_charge_added_session')}}kWH
+        ({{(100*((states('sensor.myenergi_zappi_charge_added_session')|float/72)))
+        | round(2)}}%) added in this charge session.
+      title: ⚡Zappi
+  mode: single
+- id: '1734361788849'
+  alias: Sociable Hours
+  description: Turn on Do Not Disturb in the evenings and off in the mornings.
+  triggers:
+  - trigger: time
+    at: '23:00:00'
+    id: evening
+  - trigger: time
+    at: 07:00:00
+    id: weekday-morning
+  - trigger: time
+    at: 08:00:00
+    id: weekend-morning
+  conditions:
+  - condition: or
+    conditions:
+    - condition: trigger
+      id:
+      - evening
+      - weekend-morning
+    - condition: and
+      conditions:
+      - condition: time
+        after: 07:00:00
+        weekday:
+        - mon
+        - tue
+        - wed
+        - thu
+        - fri
+  actions:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - evening
+      sequence:
+      - action: input_boolean.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: input_boolean.do_not_disturb
+    - conditions:
+      - condition: trigger
+        id:
+        - weekday-morning
+        - weekend-morning
+      sequence:
+      - action: input_boolean.turn_off
+        metadata: {}
+        data: {}
+        target:
+          entity_id: input_boolean.do_not_disturb
+  mode: single
